--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,14 +19,14 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: yourdockerhubusername/fastapi-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bitebot-chat:latest
           build-args: |
             GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
             GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
